--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    server_name  localhost example.com;
+    server_name  localhost manzuria.ddns.net;
 
     ###HEIMDALL-PROXY###
     location / {
